--- a/journal/202109.md
+++ b/journal/202109.md
@@ -8,9 +8,9 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 - development work on 2 consensus changes completed
 - Politeia v1.2 release
-- maybe mention something in DCRDEX like backend multi-asset reg fee support (too complex for an intro?) or translations
 - new releases of Android and iOS wallets
 - first testnet build of GoDCR
+- maybe mention something in DCRDEX like backend multi-asset reg fee support (too complex for an intro?) or translations
 
 }
 
@@ -22,9 +22,7 @@ Contents: { sync }
 - [Network](#network)
 - [Ecosystem](#ecosystem)
 - [Outreach](#outreach)
-- [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
@@ -55,7 +53,7 @@ Other merged work:
 - implemented spend journal [pruning](https://github.com/decred/dcrd/pull/2641) that delays removal of spend journal entries until they are no longer used (this is needed for [asynchronous indexing](https://github.com/decred/dcrd/issues/1470) that will speed up block validation)
 - added more tests for address manager and [decoupled](https://github.com/decred/dcrd/pull/2596) it from `wire` package, in preparation for upcoming changes in the wire protocol
 - pinned [Docker](https://github.com/decred/dcrd/pull/2735) images and GitHub [Actions](https://github.com/decred/dcrd/pull/2736) with hashes instead of tags for better supply chain security
-- reworked [Docker](https://github.com/decred/dcrd/pull/2740) support to provide an image with strong focus on security. It will only include Decred-specific binaries ("distroless") and run them as an unprivileged user. The new final image is around 10 MB, compared to ~1 GB for the existing version.
+- reworked [Docker](https://github.com/decred/dcrd/pull/2740) support to provide an image with strong focus on security. It only includes Decred-specific binaries ("distroless") and runs them as an unprivileged user. The new final image is around 10 MB, compared to ~1 GB for the previous version.
 - code upgraded to use [Go 1.16](https://github.com/decred/dcrd/pull/2722) features
 - updated module [hierarchy](https://github.com/decred/dcrd/pull/2744) graph
 
@@ -67,10 +65,10 @@ Other merged work:
 
 _dcrwallet is a wallet server used by command-line and graphical wallet applications._
 
-- added config option for max [log size](https://github.com/decred/dcrwallet/pull/2077) before it is rotated
 - allow processing [VSP fees](https://github.com/decred/dcrwallet/pull/2058) for already bought tickets when the ticketbuyer is off
 - changed the default `ticketbuyer` [limit](https://github.com/decred/dcrwallet/pull/2086) to 1 max tickets per block
 - allow to [disable](https://github.com/decred/dcrwallet/pull/2088) account discovery (allows to optimize clients that don't need it such as dcrlnd)
+- added config option for max [log size](https://github.com/decred/dcrwallet/pull/2077) before it is rotated
 - code upgraded to [Go 1.16](https://github.com/decred/dcrwallet/pull/2085) and latest [dcrd](https://github.com/decred/dcrwallet/pull/2087) modules
 - fixed some issues with processing and confirming [fee payments](https://github.com/decred/dcrwallet/pull/2083) for VSP-managed tickets
 - fixed [fee calculation](https://github.com/decred/dcrwallet/pull/2057) for multisig transactions
@@ -80,7 +78,7 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-_Decrediton is the full-featured desktop wallet working in full node and lightweight (SPV) modes._
+_Decrediton is a full-featured desktop wallet app with integrated voting, privacy, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
 - implemented new UI design for [LN Channels](https://github.com/decred/decrediton/pull/3543) tab
 - update all accounts' [passphrases](https://github.com/decred/decrediton/pull/3546) on private passphrase change
@@ -135,13 +133,13 @@ Backend, internal, and command-line changes:
 - ~4 other backend bug fixes
 - increased backend and end-to-end UI test coverage
 
-{ UI image candidates: design images in [2497](https://github.com/decred/politeiagui/issues/2497#issuecomment-887530713) }
+{ image candidates: design images in [2497](https://github.com/decred/politeiagui/issues/2497#issuecomment-887530713) }
 
 <a id="vspd" />
 
 **[vspd](https://github.com/decred/vspd)**
 
-_vspd is server software for running a Voting Service Provider (VSP). VSP votes on behalf of its users 24/7 and cannot steal funds._
+_vspd is server software for running a Voting Service Provider. VSP votes on behalf of its users 24/7 and cannot steal funds._
 
 - added architecture [diagram](https://github.com/decred/vspd/pull/296) to the [Deployment Guide](https://github.com/decred/vspd/blob/master/docs/deployment.md)
 - updated handling of dcrd's [errors](https://github.com/decred/vspd/pull/295)
@@ -175,16 +173,16 @@ User-facing:
 - added historical [candlestick chart](https://github.com/decred/dcrdex/pull/1208)
 - recognize [`rpcconnect`](https://github.com/decred/dcrdex/pull/1206) Bitcoin config parameter
 
-{ UI image candidates: 1208 1207}
+{ image candidates: 1208 1207}
 
 Backend and internal changes:
 
-- support paying registration fee in different [assets](https://github.com/decred/dcrdex/pull/1202), implemented BTC fees
+- added infrastructure for paying registration fee in [assets](https://github.com/decred/dcrdex/pull/1202) other than DCR, implemented reg fees in BTC
 - refactoring to prepare for [Bitcoin SPV](https://github.com/decred/dcrdex/pull/1089) support
-- more fine-grained [rate limiting](https://github.com/decred/dcrdex/pull/1192) to defend against network attacks
+- more fine-grained [rate limiting](https://github.com/decred/dcrdex/pull/1192) to protect against network attacks
 - optimized [restoring](https://github.com/decred/dcrdex/pull/1183) account from seed
 - simplified the procedure of changing [lot sizes](https://github.com/decred/dcrdex/pull/1212) (the minimum trade amount)
-- discover accounts [before](https://github.com/decred/dcrdex/pull/1201) requesting registration fee address (to support multi-asset fees)
+- discover accounts [earlier](https://github.com/decred/dcrdex/pull/1201) in the flow (to support multi-asset fees)
 - simplified check for wallet [ownership](https://github.com/decred/dcrdex/pull/1193) when changing wallet settings
 - added [`usermatches`](https://github.com/decred/dcrdex/pull/1213) command-line app for retrieving match data and saving it as CSV
 
@@ -192,13 +190,13 @@ Work towards internationalization:
 
 - added [translation](https://github.com/decred/dcrdex/pull/1127) support to the web client UI
 - improved system for translating [notifications](https://github.com/decred/dcrdex/pull/1197)
-- added a `dexc` switch to re-translate templates on the fly (allows faster iteration during development)
+- added a `dexc` switch to re-translate templates on the fly (allows faster iteration)
 - added [Portuguese](https://github.com/decred/dcrdex/pull/1185) and [Chinese](https://github.com/decred/dcrdex/pull/1207) translations
 
 Internal changes towards Ethereum support:
 
 - added a tool to [verify](https://github.com/decred/dcrdex/pull/1203) swap contract deployed on the Ethereum network (can be used to detect unexpected change of the contract)
-- added decoding and validation of [transactions](https://github.com/decred/dcrdex/pull/1215) while they are in a mempool (allows to fail fast before a malformed tx is mined)
+- added decoding and validation of [transactions](https://github.com/decred/dcrdex/pull/1215) while they are in the mempool (allows to fail fast before a malformed tx is mined)
 - implemented estimation of [max order](https://github.com/decred/dcrdex/pull/1184) the wallet may place
 
 <a id="dcrandroid" />
@@ -207,14 +205,14 @@ Internal changes towards Ethereum support:
 
 Decred Wallet v1.6.1 has been released on [Google Play Store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet)!
 
-Privacy-minded users can now also get the APK directly from [GitHub release](https://github.com/planetdecred/dcrandroid/releases/tag/v1.6.1) and try it on their Android-based OS.
+Privacy-minded users can now also get the signed APK directly from the [GitHub release](https://github.com/planetdecred/dcrandroid/releases/tag/v1.6.1).
 
 Merged in September:
 
 - added settings option to choose app [theme](https://github.com/planetdecred/dcrandroid/pull/582)
 - allow wallet unlock attempts with an [empty](https://github.com/planetdecred/dcrandroid/pull/585) passphrase
 
-Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (shared by dcrandroid, dcrios, and godcr):
+Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (shared by Android/iOS wallets and GoDCR):
 
 - added various data queries to support multi-wallet [staking](https://github.com/planetdecred/dcrlibwallet/pull/206) overview
 
@@ -233,15 +231,15 @@ Merged in September:
 - allow wallet unlock attempts with an [empty](https://github.com/planetdecred/dcrios/pull/827) passphrase
 - ~5 bug fixes and ~2 UI tweaks
 
-{ UI image candidates: 812 851 }
+{ image candidates: 812 851 }
 
 <a id="godcr" />
 
 **[GoDCR](https://github.com/planetdecred/godcr)**
 
-_GoDCR is a lightweight desktop wallet for Decred._
+_GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
-First testnet build is [available](https://twitter.com/planetdecred/status/1441164793470087187) for preview! Download it from the [GitHub release](https://github.com/planetdecred/godcr/releases) and make sure to verify the signatures. If you plan hunting for bugs, it is recommended to build from latest [source](https://github.com/planetdecred/godcr) to have all recent bug fixes.
+First testnet build is [available](https://twitter.com/planetdecred/status/1441164793470087187) for preview! Download it from the [GitHub release](https://github.com/planetdecred/godcr/releases) and verify the signatures. If you plan hunting for bugs, it is recommended to build from latest [source](https://github.com/planetdecred/godcr) to have all recent bug fixes.
 
 User-facing changes merged:
 
@@ -253,10 +251,10 @@ User-facing changes merged:
 - allow closing [dropdowns](https://github.com/planetdecred/godcr/pull/616) by clicking outside
 - improved rendering of Markdown [tables](https://github.com/planetdecred/godcr/pull/529)
 - refactored [ticket](https://github.com/planetdecred/godcr/pull/567) fetching and display
-- optimized UX of language and currency [modals](https://github.com/planetdecred/godcr/pull/626)
+- optimized UX of language and currency selection [modals](https://github.com/planetdecred/godcr/pull/626)
 - added [Spanish](https://github.com/planetdecred/godcr/pull/521) translation
 - fixed [blurry](https://github.com/planetdecred/godcr/pull/618) icons on higher resolutions
-- ~7 other UX tweaks and ~17 other bug fixes
+- ~7 other UX tweaks and ~17 bug fixes
 
 Internal and developer changes:
 
@@ -264,11 +262,11 @@ Internal and developer changes:
 - added [makefile](https://github.com/planetdecred/godcr/pull/628) to manage target OS builds
 - [embedded](https://github.com/planetdecred/godcr/pull/620) assets in app binary
 
-{ UI image candidates: 587 622 629 }
+{ image candidates: 587 622 629 }
 
 In progress:
 
-- [DEX](https://github.com/planetdecred/godcr/pull/637) integration (building on [support](https://github.com/planetdecred/dcrlibwallet/pull/210) in dcrlibwallet)
+- [DEX](https://github.com/planetdecred/godcr/pull/637) integration (building on base [support](https://github.com/planetdecred/dcrlibwallet/pull/210) in dcrlibwallet)
 
 Check the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) for a status update and 2021-2022 roadmap.
 
@@ -300,7 +298,7 @@ Tip: bleeding edge development version of dcrdata can be accessed at [tip.dcrdat
 
 **[dcrdevdocs](https://github.com/decred/dcrdevdocs)**
 
-_dcrdevdocs is a source code for Decred [developer documentation](https://devdocs.decred.org/)_
+_dcrdevdocs is a source code for Decred [developer documentation](https://devdocs.decred.org/)._
 
 - added [dark mode](https://github.com/decred/dcrdevdocs/pull/97) _(of course)_
 - removed [inline HTML](https://github.com/decred/dcrdevdocs/pull/98) (helps to detect broken links)
@@ -308,7 +306,7 @@ _dcrdevdocs is a source code for Decred [developer documentation](https://devdoc
 
 Other:
 
-- [Bug Bounty](https://bounty.decred.org/) program got two [scope](https://github.com/decred/dcrbounty/pull/81) [updates](https://github.com/decred/dcrbounty/pull/83): dcrstakepool replaced with vspd, dcrdocs removed, and clarified rules for atomicswap.
+- [Bug Bounty](https://bounty.decred.org/) program got two [scope](https://github.com/decred/dcrbounty/pull/81) [updates](https://github.com/decred/dcrbounty/pull/83): replaced dcrstakepool with vspd, removed dcrdocs, and clarified rules for atomicswap.
 
 
 ## People
@@ -359,18 +357,18 @@ Ticket prices seem to have hit a relative plateau between two extremes.
 
 Node versions as of Oct 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (257 dcrd nodes): v1.6.2 - 55%, v1.6.0 - 13%, v1.6.1 - 12%, v1.7 dev builds - 14%, v1.6 dev builds - 2.7%, v1.5.2 - 2%, v1.5.1 - 1.2%.
 
-The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jza9l4a5-kuoqy2o0&bin=day&axis=time&visibility=true-true-true) varied between 50.3-52.2% and set a new all-time high while the amount of mixed coins broke the 7 million mark.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jza9l4a5-kuoqy2o0&bin=day&axis=time&visibility=true-true-true) varied between 50.3-52.2% and set a new all-time high while the sum of mixed unspent coins broke the 7 million mark.
 
 Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=jza9l4a5-kuoqy2o0&bin=day&axis=time) varied between 240-550K DCR.
 
 
 ## Ecosystem
 
-Matrix users are advised to upgrade their clients (most notably Element) to patch security [vulnerability](https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/) disclosed on Sep 13. If user's account is compromised (by either a direct compromise of account credentials, or by a compromised homeserver), in certain circumstances it may be possible to read encrypted messages sent to it by vulnerable contacts. The disclosure noted, "The greatest risk is to users who are in encrypted rooms containing malicious servers. Admins of malicious servers could attempt to impersonate their users' devices in order to spy on messages sent by vulnerable clients in that room.". As an extra safety measure, you can review active sessions and remove any obsolete or suspicious ones.
+Matrix users are advised to upgrade their clients (most notably Element) to patch security [vulnerability](https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/) disclosed on Sep 13. If user's account is compromised (by either a direct compromise of account credentials, or by a compromised homeserver), in certain circumstances it may be possible to read encrypted messages sent to such account from its vulnerable contacts. The disclosure noted, "The greatest risk is to users who are in encrypted rooms containing malicious servers. Admins of malicious servers could attempt to impersonate their users' devices in order to spy on messages sent by vulnerable clients in that room.". As an extra safety measure, you can review active sessions and remove any obsolete or suspicious ones.
 
-Legacy [decredvoting.com](https://decredvoting.com/) has been removed from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). Voting wallets are still online to vote the remaining tickets (9 of Oct 1). Decred Voting has served [since 2018](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/) and is known for developing advanced features like email [notifications](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) on voted tickets and custom ticket analytics [dashboard](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/), and for supporting small holders with [education](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3) on ticket splitting and [features](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) to make it easier to use.
+Legacy [decredvoting.com](https://decredvoting.com/) has been removed from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). Voting wallets are still online to vote the remaining tickets (9 tickets as of Oct 1). Decred Voting has served [since 2018](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/) and is known for developing advanced features like email [notifications](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) on voted tickets and custom ticket analytics [dashboard](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/), and for supporting small holders with [education](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3) on ticket splitting and [features](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) to make it easier to use.
 
-For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the upcoming consensus upgrades. As of Oct 1, all legacy VSPs managed less than 250 tickets, or 0.6% of the ticket pool.
+For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the coming consensus upgrades. As of Oct 1, all legacy VSPs managed less than 250 tickets, or 0.6% of the ticket pool.
 
 u/daryledesilva [shared](https://www.reddit.com/r/decred/comments/pp8uu4/decred_dcr_dollar_cost_averaging_dca_calculator/) a dollar-cost averaging [calculator](https://dcacryptocalculator.com/decred) for Decred.
 
@@ -381,7 +379,7 @@ Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat t
 
 ## Outreach
 
-r/decred's pinned thread for newcomers has been updated: [Welcome to Decred: Money Evolved](https://www.reddit.com/r/decred/comments/pqsmgf/welcome_to_decred_money_evolved/).
+r/decred's pinned post for newcomers has been updated: [Welcome to Decred: Money Evolved](https://www.reddit.com/r/decred/comments/pqsmgf/welcome_to_decred_money_evolved/).
 
 @davecgh armed us with a new fantastic [Decred pitch](https://www.reddit.com/r/decred/comments/ppmkdm/opinions_on_long_term_value_of_decred_not_asking/hd5kvp0/) answering how Decred is valuable long term. Twitter version [here](https://twitter.com/rstaudt2/status/1443257842920734727).
 
@@ -401,11 +399,11 @@ Secured the following news articles:
 
 Selected articles:
 
-- Decred Blockchain Analysis - Part 3 by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-3/)) - explores what insights can be found by applying address clustering to tickets. Note: there remain a couple of issues with the results to be fixed. { summary ok? feel free to add more key points to trigger curiosity and clicks; notice ok? please adjust if needed }
+- Decred Blockchain Analysis - Part 3 by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-3/)) - explores what insights can be found by applying address clustering to tickets. Note: there remain a couple of issues to be fixed with the results. { summary ok? feel free to add more key points to trigger curiosity and clicks; notice ok? please adjust if needed }
 - Decred address clustering deep dive by @richardred ([blockcommons.red](https://blockcommons.red/publication/clustering-deep-dive/)) - sub-report specialized on the challenges of clustering { fine to mention in this list? }
 - A deep dive into how the top 10 DAOs work by Andrey Sergeenkov ([coinmarketcap.com](https://coinmarketcap.com/alexandria/article/a-deep-dive-into-how-the-top-daos-work))
 
-{ bison pool pic is a must }
+{ image: bison pool pic is a must }
 
 Videos:
 
@@ -417,12 +415,12 @@ Videos:
 Audio:
 
 - Cigars and Crypto 175 - Luke Powell of the Decred Project ([cigarsandcrypto.com](https://www.cigarsandcrypto.com/episode-175-luke-powell-of-the-decred-project/))
-- Decred Society by @phoenixgreen has gone live on [Apple Podcasts](https://podcasts.apple.com/us/podcast/decred-society/id1586826872).
+- Decred Society series by @phoenixgreen has gone live on [Apple Podcasts](https://podcasts.apple.com/us/podcast/decred-society/id1586826872).
 
 Translations:
 
-- [Decred News August](https://www.youtube.com/watch?v=6ifueUAWy_c) - in Chinese (@Dominic), published on Chinese platforms like [Bilibili](https://www.bilibili.com/video/BV1QA411c77W), [Weibo](https://weibo.com/6824123103/KvXMCaDEW), and [WeChat](https://mp.weixin.qq.com/s/l1RO1Mkb9LNQK2Z2x1mkyw)
-- { maybe list two Sep es translations, if published anywhere }
+- [Decred News August](https://www.youtube.com/watch?v=6ifueUAWy_c) - in Chinese (@Dominic), published on Chinese video platforms like [Bilibili](https://www.bilibili.com/video/BV1QA411c77W), [Weibo](https://weibo.com/6824123103/KvXMCaDEW), and [WeChat](https://mp.weixin.qq.com/s/l1RO1Mkb9LNQK2Z2x1mkyw)
+- { list two Sep es translations, if published anywhere - to be clarified }
 - Decred Journal August 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you to all translators for staying around!
 
 Share your translations in our [#translations](https://chat.decred.org/#/room/#translations:decred.org) chat room.
