--- a/journal/202109.md
+++ b/journal/202109.md
@@ -45,7 +45,7 @@ Explicit Version Upgrades consensus change ([DCP-8](https://github.com/decred/dc
 Automatic Ticket Revocations consensus change ([DCP-9](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki)):
 
 - [preparations](https://github.com/decred/dcrd/pull/2718): added tests, added agenda definitions, reorganized code to fit upcoming changes. A new transaction priority was introduced to ensure automatic revocations are always created. Full list of priorities becomes: votes (highest) > automatic revocations > tickets > regular transactions and revocations (lowest).
-- [implemented](https://github.com/decred/dcrd/pull/2720) the actual consensus change. Once activated, blocks will be required to contain revocations for all tickets that become missed or expired as of that block. New rules will also allow to unlock some [~200K DCR](https://github.com/decredcommunity/proposals/blob/master/proposals/e2d7b7d/docs/unrevoked-missed-tickets.md) that got stuck in unrevoked missed tickets.
+- [implemented](https://github.com/decred/dcrd/pull/2720) the actual consensus change. Once activated, blocks will be required to contain revocations for all tickets that become missed or expired as of that block. New rules will also allow unlocking some [~200K DCR](https://github.com/decredcommunity/proposals/blob/master/proposals/e2d7b7d/docs/unrevoked-missed-tickets.md) that got stuck in unrevoked missed tickets.
 - @rstaudt2 posted a [proposal update](https://proposals.decred.org/record/e2d7b7d/comments/19) that all dcrd development work is complete
 
 Other merged work:
@@ -78,7 +78,7 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-_Decrediton is a full-featured desktop wallet app with integrated voting, privacy, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
+_Decrediton is a full-featured desktop wallet app with integrated voting, Stake Shuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
 - implemented new UI design for [LN Channels](https://github.com/decred/decrediton/pull/3543) tab
 - update all accounts' [passphrases](https://github.com/decred/decrediton/pull/3546) on private passphrase change
@@ -104,7 +104,7 @@ Another feature and bugfix release has [landed](https://twitter.com/lukebp_/stat
 - compare any two proposal versions
 - embed image button
 - optimistic instant comment vote updates
-- server: proposal billing statuses to formalize whether billing is allowed or not
+- server: proposal billing status, to formalize whether billing is allowed or not
 - server: unified proposal status to simplify clients
 - server: increased security and stability
 
@@ -112,16 +112,16 @@ For more details check the release notes in [politeia](https://github.com/decred
 
 User-facing changes merged in September:
 
-- integrated new proposal [statuses](https://github.com/decred/politeiagui/pull/2609) and admin ability to set billing status
+- integrated new proposal [status](https://github.com/decred/politeiagui/pull/2609) and admin ability to set billing status
 - improved UX of [embedding images](https://github.com/decred/politeiagui/pull/2567)
 - show login modal when user session [expires](https://github.com/decred/politeiagui/pull/2541)
-- added [SEO meta tags](https://github.com/decred/politeiagui/pull/2614) to improve appearance in search results and enable nice previews on Twitter and Facebook
+- added [SEO meta tags](https://github.com/decred/politeiagui/pull/2614) to improve placement in search results and enable nice previews on Twitter and Facebook
 - updated dark mode [toggle](https://github.com/decred/politeiagui/pull/2588) design
 - ~18 GUI bug fixes and ~3 enhancements
 
 Backend, internal, and command-line changes:
 
-- added unified [proposal status](https://github.com/decred/politeia/pull/1515) that serves as a single source for proposal metadata from different plugins, thus removing complexity from clients and also reducing the load on server. The new status can be queried with `pictl proposalsummaries` command.
+- added unified [proposal status](https://github.com/decred/politeia/pull/1515) that serves as a single source for proposal metadata from different plugins, thus removing complexity from clients and also reducing load on the server. The new status can be queried with `pictl proposalsummaries` command.
 - added high-level interfaces for [file system checks](https://github.com/decred/politeia/pull/1512) to verify data integrity and rebuild caches on startup. [Implementations](https://github.com/decred/politeia/issues/1511) for individual components will be done separately.
 - implemented cache rebuild for the [record inventory](https://github.com/decred/politeia/pull/1520) when file system check is enabled with `--fsck`
 - added option to save `pictl`'s vote results output [as CSV](https://github.com/decred/politeia/pull/1478)
@@ -139,7 +139,7 @@ Backend, internal, and command-line changes:
 
 **[vspd](https://github.com/decred/vspd)**
 
-_vspd is server software for running a Voting Service Provider. VSP votes on behalf of its users 24/7 and cannot steal funds._
+_vspd is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
 
 - added architecture [diagram](https://github.com/decred/vspd/pull/296) to the [Deployment Guide](https://github.com/decred/vspd/blob/master/docs/deployment.md)
 - updated handling of dcrd's [errors](https://github.com/decred/vspd/pull/295)
@@ -399,8 +399,8 @@ Secured the following news articles:
 
 Selected articles:
 
-- Decred Blockchain Analysis - Part 3 by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-3/)) - explores what insights can be found by applying address clustering to tickets. Note: there remain a couple of issues to be fixed with the results. { summary ok? feel free to add more key points to trigger curiosity and clicks; notice ok? please adjust if needed }
-- Decred address clustering deep dive by @richardred ([blockcommons.red](https://blockcommons.red/publication/clustering-deep-dive/)) - sub-report specialized on the challenges of clustering { fine to mention in this list? }
+- Decred Blockchain Analysis - Part 3 by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-3/)) - explores what insights can be found by applying address clustering to all the tickets in the pool at specific block heights. Note: there remain a couple of issues to be fixed with the results. 
+- Decred address clustering deep dive by @richardred ([blockcommons.red](https://blockcommons.red/publication/clustering-deep-dive/)) - sub-report specialized on the challenges of clustering, includes many graphs showing the voting behavior of different clusters (users), and what it looks like when something is wrong with a cluster.
 - A deep dive into how the top 10 DAOs work by Andrey Sergeenkov ([coinmarketcap.com](https://coinmarketcap.com/alexandria/article/a-deep-dive-into-how-the-top-daos-work))
 
 { image: bison pool pic is a must }
@@ -439,11 +439,13 @@ Sushi's Miso app was [exploited](https://www.coindesk.com/business/2021/09/17/3m
 
 The Compound DeFi app deployed new smart contracts which [gave](https://www.coindesk.com/tech/2021/09/30/defi-money-market-compound-overpays-15m-in-comp-rewards-in-possible-exploit/) away $80M worth of COMP tokens in unintended ways. Founder Robert Leshner asked recipients to send the tokens back, and described it as a moral [dilemma](https://www.coindesk.com/tech/2021/10/01/compound-founder-says-80m-bug-presents-moral-dilemma-for-defi-users/), after initially intimating that people who don't give the tokens back could have their details passed to tax collection authorities. One interesting aspect of the story is that the problem was identified quite quickly, but because changing the contracts requires a governance process there was no way to deploy a quick fix and all of the vulnerable funds were drained.
 
-Coinbase was [hacked](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) and it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two-factor recovery process to bypass this safeguard and withdraw their victims' funds. In a notification [letter](https://oag.ca.gov/system/files/09-24-2021%20Customer%20Notification.pdf) to customers Coinbase said the flaw has been fixed and that all affected customers will be reimbursed. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer.
+Coinbase  users have been [exploited](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/), it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two-factor recovery process to bypass this safeguard and withdraw their victims' funds. In a notification [letter](https://oag.ca.gov/system/files/09-24-2021%20Customer%20Notification.pdf) to customers Coinbase said the flaw has been fixed and that all affected customers will be reimbursed. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer.
+
+The Digital Asset Market Structure and Investor Protection Act, which was [introduced](https://beyer.house.gov/news/documentsingle.aspx?DocumentID=5307) in July, continues to see [coverage](https://www.jdsupra.com/legalnews/new-us-digital-assets-bill-casts-wide-5957884/) and discussion, indicating that it will receive serious consideration from lawmakers. The proposed Act is one of the broadest pieces of legislation to address digital assets, and would clarify how different types of asset would fall under the purview of different enforcement agencies. The proposed definition of a security would focus on equity or voting rights in the issuing (corporate) entity, excluding voting on blockchain matters like block creation. There is also an aspect whereby selling tokens for an unfinished product whose production will be funded by the token sale (i.e. the ICO model) would be considered securities. Stablecoins could not be created or used without being approved by the Secretary of the Treasury, and the Federal Reserve would receive the authority to issue a US central bank digital currency.
 
 { Did this get any legs?
 
-- https://twitter.com/lukebp_/status/1422549683025678350
+- https://twitter.com/lukebp_/status/1422549683025678350 {deleted}
 - https://twitter.com/lex_node/status/1420959286306422790
 - https://nulltx.com/nugenesis-comprehensive-2-part-review-of-proposed-amendment-of-the-federal-reserve-act-part-1/ {I'm reading this and it lapses into outright shilling of "NuGenesis" halfway down, which causes me to question the credibility of the source. Also anyone who has put the effort into reading and writing about this proposed amendment is going to be biased about whether or not it's an important document or likely to lead anywhere. I'm on the fence, having read half of one of these articles now I guess I could carry on and read the rest and summarise them if you like. }
 - https://nulltx.com/nugenesis-comprehensive-2-part-review-of-proposed-amendment-of-the-federal-reserve-act-part-2/
