add intro bullets

--- a/journal/202109.md
+++ b/journal/202109.md
@@ -6,11 +6,10 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { intro, major news of the month, don't put any links here
 
-- development work on 2 consensus changes completed
-- Politeia v1.2 release
-- new releases of Android and iOS wallets
-- first testnet build of GoDCR
-- maybe mention something in DCRDEX like backend multi-asset reg fee support (too complex for an intro?) or translations
+- Work on the DCP-8 and DCP-9 consensus changes has been completed, they are ready to be introduced for an on chain vote to ratify them.
+- Politeia has been updated to v1.2, adding features like proposal updates and the capacity to make comparisons between any two versions of a proposal.
+- The Android and iOS mobile wallets saw new releases in their respective app stores.
+- GoDCR reach its first functional testnet build, demonstrating what has been achieved by that project so far, as the proposal for continued funding of GoDCR was published and discussed.
 
 }
 
