--- a/journal/202109.md
+++ b/journal/202109.md
@@ -4,16 +4,14 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here
+September's highlights:
 
-- Work on the DCP-8 and DCP-9 consensus changes has been completed, they are ready to be introduced for an on chain vote to ratify them.
+- Work on the DCP-8 and DCP-9 consensus changes has been completed, they are ready to be introduced for an on-chain vote to ratify them.
 - Politeia has been updated to v1.2, adding features like proposal updates and the capacity to make comparisons between any two versions of a proposal.
 - The Android and iOS mobile wallets saw new releases in their respective app stores.
-- GoDCR reach its first functional testnet build, demonstrating what has been achieved by that project so far, as the proposal for continued funding of GoDCR was published and discussed.
+- GoDCR reached its first functional testnet build, demonstrating what has been achieved by that project so far, as the proposal for continued funding of GoDCR was published and discussed.
 
-}
-
-Contents: { sync }
+Contents:
 
 - [Development](#development)
 - [People](#people)
@@ -77,7 +75,7 @@ _dcrwallet is a wallet server used by command-line and graphical wallet applicat
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-_Decrediton is a full-featured desktop wallet app with integrated voting, Stake Shuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
+_Decrediton is a full-featured desktop wallet app with integrated voting, StakeShuffle mixing, Lightning Network, DEX trading, and more. It runs with or without a full blockchain (SPV mode)._
 
 - implemented new UI design for [LN Channels](https://github.com/decred/decrediton/pull/3543) tab
 - update all accounts' [passphrases](https://github.com/decred/decrediton/pull/3546) on private passphrase change
@@ -441,16 +439,6 @@ The Compound DeFi app deployed new smart contracts which [gave](https://www.coin
 Coinbase  users have been [exploited](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/), it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two-factor recovery process to bypass this safeguard and withdraw their victims' funds. In a notification [letter](https://oag.ca.gov/system/files/09-24-2021%20Customer%20Notification.pdf) to customers Coinbase said the flaw has been fixed and that all affected customers will be reimbursed. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer.
 
 The Digital Asset Market Structure and Investor Protection Act, which was [introduced](https://beyer.house.gov/news/documentsingle.aspx?DocumentID=5307) in July, continues to see [coverage](https://www.jdsupra.com/legalnews/new-us-digital-assets-bill-casts-wide-5957884/) and discussion, indicating that it will receive serious consideration from lawmakers. The proposed Act is one of the broadest pieces of legislation to address digital assets, and would clarify how different types of asset would fall under the purview of different enforcement agencies. The proposed definition of a security would focus on equity or voting rights in the issuing (corporate) entity, excluding voting on blockchain matters like block creation. There is also an aspect whereby selling tokens for an unfinished product whose production will be funded by the token sale (i.e. the ICO model) would be considered securities. Stablecoins could not be created or used without being approved by the Secretary of the Treasury, and the Federal Reserve would receive the authority to issue a US central bank digital currency.
-
-{ Did this get any legs?
-
-- https://twitter.com/lukebp_/status/1422549683025678350 {deleted}
-- https://twitter.com/lex_node/status/1420959286306422790
-- https://nulltx.com/nugenesis-comprehensive-2-part-review-of-proposed-amendment-of-the-federal-reserve-act-part-1/ {I'm reading this and it lapses into outright shilling of "NuGenesis" halfway down, which causes me to question the credibility of the source. Also anyone who has put the effort into reading and writing about this proposed amendment is going to be biased about whether or not it's an important document or likely to lead anywhere. I'm on the fence, having read half of one of these articles now I guess I could carry on and read the rest and summarise them if you like. }
-- https://nulltx.com/nugenesis-comprehensive-2-part-review-of-proposed-amendment-of-the-federal-reserve-act-part-2/
-- the interest for DCR here is what it says on privacy/mixing, and stablecoins that DCRDEX plans to add
-
-}
 
 That's all for September. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
