--- a/journal/202109.md
+++ b/journal/202109.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – September 2021
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![abstract art by @saender](../img/202109.1.github.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: Fourier's Square by @saender_
 
 September's highlights:
 
@@ -453,5 +453,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: davecgh, lukebp
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
