--- a/journal/202109.md
+++ b/journal/202109.md
@@ -50,7 +50,7 @@ Other merged work:
 - implemented spend journal [pruning](https://github.com/decred/dcrd/pull/2641) that delays removal of spend journal entries until they are no longer used (this is needed for [asynchronous indexing](https://github.com/decred/dcrd/issues/1470) that will speed up block validation)
 - added more tests for address manager and [decoupled](https://github.com/decred/dcrd/pull/2596) it from `wire` package, in preparation for upcoming changes in the wire protocol
 - pinned [Docker](https://github.com/decred/dcrd/pull/2735) images and GitHub [Actions](https://github.com/decred/dcrd/pull/2736) with hashes instead of tags for better supply chain security
-- reworked [Docker](https://github.com/decred/dcrd/pull/2740) support to provide an image with strong focus on security. It only includes Decred-specific binaries ("distroless") and runs them as an unprivileged user. The new final image is around 10 MB, compared to ~1 GB for the previous version.
+- reworked [Docker](https://github.com/decred/dcrd/pull/2740) support to provide an image with a strong focus on security. It only includes Decred-specific binaries ("distroless") and runs them as an unprivileged user. The new final image is around 10 MB, compared to ~1 GB for the previous version.
 - code upgraded to use [Go 1.16](https://github.com/decred/dcrd/pull/2722) features
 - updated module [hierarchy](https://github.com/decred/dcrd/pull/2744) graph
 
@@ -120,7 +120,7 @@ User-facing changes merged in September:
 
 Backend, internal, and command-line changes:
 
-- added unified [proposal status](https://github.com/decred/politeia/pull/1515) that serves as a single source for proposal metadata from different plugins, thus removing complexity from clients and also reducing load on the server. The new status can be queried with `pictl proposalsummaries` command.
+- added unified [proposal status](https://github.com/decred/politeia/pull/1515) that serves as a single source for proposal metadata from different plugins, thus removing complexity from clients and also reducing the load on the server. The new status can be queried with `pictl proposalsummaries` command.
 - added high-level interfaces for [file system checks](https://github.com/decred/politeia/pull/1512) to verify data integrity and rebuild caches on startup. [Implementations](https://github.com/decred/politeia/issues/1511) for individual components will be done separately.
 - implemented cache rebuild for the [record inventory](https://github.com/decred/politeia/pull/1520) when file system check is enabled with `--fsck`
 - added option to save `pictl`'s vote results output [as CSV](https://github.com/decred/politeia/pull/1478)
@@ -180,7 +180,7 @@ _DCRDEX candlestick chart. Not investment advice._
 
 Backend and internal changes:
 
-- added infrastructure for paying registration fee in [assets](https://github.com/decred/dcrdex/pull/1202) other than DCR, implemented reg fees in BTC
+- added infrastructure for paying the registration fee in [assets](https://github.com/decred/dcrdex/pull/1202) other than DCR, implemented reg fees in BTC
 - refactoring to prepare for [Bitcoin SPV](https://github.com/decred/dcrdex/pull/1089) support
 - more fine-grained [rate limiting](https://github.com/decred/dcrdex/pull/1192) to protect against network attacks
 - optimized [restoring](https://github.com/decred/dcrdex/pull/1183) account from seed
@@ -202,7 +202,7 @@ _DCRDEX Chinese translation preview_
 
 Internal changes towards Ethereum support:
 
-- added a tool to [verify](https://github.com/decred/dcrdex/pull/1203) swap contract deployed on the Ethereum network (can be used to detect unexpected change of the contract)
+- added a tool to [verify](https://github.com/decred/dcrdex/pull/1203) swap contract deployed on the Ethereum network (can be used to detect an unexpected change of the contract)
 - added decoding and validation of [transactions](https://github.com/decred/dcrdex/pull/1215) while they are in the mempool (allows to fail fast before a malformed tx is mined)
 - implemented estimation of [max order](https://github.com/decred/dcrdex/pull/1184) the wallet may place
 
@@ -223,7 +223,7 @@ Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (
 
 - added various data queries to support multi-wallet [staking](https://github.com/planetdecred/dcrlibwallet/pull/206) overview
 
-See the new mobile wallets [proposal](https://proposals.decred.org/record/6db3c4e) to learn about development roadmap for 2021-2022.
+See the new mobile wallets [proposal](https://proposals.decred.org/record/6db3c4e) to learn about the development roadmap for 2021-2022.
 
 <a id="dcrios" />
 
@@ -248,7 +248,7 @@ _Decred Wallet (iOS) Dark Overview_
 
 _GoDCR is a lightweight desktop wallet app with integrated staking, privacy, and Politeia browsing._
 
-First testnet build is [available](https://twitter.com/planetdecred/status/1441164793470087187) for preview! Download it from the [GitHub release](https://github.com/planetdecred/godcr/releases) and verify the signatures. If you plan hunting for bugs, it is recommended to build from latest [source](https://github.com/planetdecred/godcr) to have all recent bug fixes.
+First testnet build is [available](https://twitter.com/planetdecred/status/1441164793470087187) for preview! Download it from the [GitHub release](https://github.com/planetdecred/godcr/releases) and verify the signatures. If you plan to hunt for bugs, it is recommended to build from the latest [source](https://github.com/planetdecred/godcr) to have all recent bug fixes.
 
 User-facing changes merged:
 
@@ -303,7 +303,7 @@ Internal changes:
 - upgraded to latest [dcrd](https://github.com/decred/dcrdata/pull/1849)
 - removed abandoned [notify.js](https://github.com/decred/dcrdata/pull/1867) dependency
 
-Tip: bleeding edge development version of dcrdata can be accessed at [tip.dcrdata.org](https://tip.dcrdata.org/).
+Tip: bleeding-edge development version of dcrdata can be accessed at [tip.dcrdata.org](https://tip.dcrdata.org/).
 
 <a id="dcrdevdocs" />
 
@@ -322,7 +322,7 @@ Other:
 
 ## People
 
-Welcome to new first time contributors with code merged to master: @naveensrinivasan ([dcrd](https://github.com/decred/dcrd/commits?author=naveensrinivasan))!
+Welcome to new first-time contributors with code merged to master: @naveensrinivasan ([dcrd](https://github.com/decred/dcrd/commits?author=naveensrinivasan))!
 
 Community stats as of Oct 2:
 
@@ -375,11 +375,11 @@ Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participati
 
 ## Ecosystem
 
-Matrix users are advised to upgrade their clients (most notably Element) to patch security [vulnerability](https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/) disclosed on Sep 13. If user's account is compromised (by either a direct compromise of account credentials, or by a compromised homeserver), in certain circumstances it may be possible to read encrypted messages sent to such account from its vulnerable contacts. The disclosure noted, "The greatest risk is to users who are in encrypted rooms containing malicious servers. Admins of malicious servers could attempt to impersonate their users' devices in order to spy on messages sent by vulnerable clients in that room.". As an extra safety measure, you can review active sessions and remove any obsolete or suspicious ones.
+Matrix users are advised to upgrade their clients (most notably Element) to patch security [vulnerability](https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/) disclosed on Sep 13. If a user's account is compromised (by either a direct compromise of account credentials or by a compromised homeserver), in certain circumstances it may be possible to read encrypted messages sent to such account from its vulnerable contacts. The disclosure noted, "The greatest risk is to users who are in encrypted rooms containing malicious servers. Admins of malicious servers could attempt to impersonate their users' devices in order to spy on messages sent by vulnerable clients in that room.". As an extra safety measure, you can review active sessions and remove any obsolete or suspicious ones.
 
-Legacy [decredvoting.com](https://decredvoting.com/) has been removed from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). Voting wallets are still online to vote the remaining tickets (9 tickets as of Oct 1). Decred Voting has served [since 2018](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/) and is known for developing advanced features like email [notifications](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) on voted tickets and custom ticket analytics [dashboard](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/), and for supporting small holders with [education](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3) on ticket splitting and [features](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) to make it easier to use.
+Legacy [decredvoting.com](https://decredvoting.com/) has been removed from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). Voting wallets are still online to vote the remaining tickets (9 tickets as of Oct 1). Decred Voting has served [since 2018](https://www.reddit.com/r/decred/comments/9c6s3l/new_voting_service_provider_aka_stake_pool_is_now/) and is known for developing advanced features like email [notifications](https://www.reddit.com/r/decred/comments/9oepq6/decredvotingcom_now_supporting_automatic_email/) on voted tickets and custom ticket analytics [dashboard](https://www.reddit.com/r/decred/comments/hbofz4/tired_of_keeping_track_of_your_staking_activities/), and for supporting smallholders with [education](https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3) on ticket-splitting and [features](https://www.reddit.com/r/decred/comments/euqd4h/introducing_split_ticket_dashboard_on/) to make it easier to use.
 
-For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the coming consensus upgrades. As of Oct 1, all legacy VSPs managed less than 250 tickets, or 0.6% of the ticket pool.
+For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the coming consensus upgrades. As of Oct 1, all legacy VSPs managed less than 250 tickets or 0.6% of the ticket pool.
 
 u/daryledesilva [shared](https://www.reddit.com/r/decred/comments/pp8uu4/decred_dcr_dollar_cost_averaging_dca_calculator/) a dollar-cost averaging [calculator](https://dcacryptocalculator.com/decred) for Decred.
 
@@ -453,9 +453,9 @@ Sushi's Miso app was [exploited](https://www.coindesk.com/business/2021/09/17/3m
 
 The Compound DeFi app deployed new smart contracts which [gave](https://www.coindesk.com/tech/2021/09/30/defi-money-market-compound-overpays-15m-in-comp-rewards-in-possible-exploit/) away $80M worth of COMP tokens in unintended ways. Founder Robert Leshner asked recipients to send the tokens back, and described it as a moral [dilemma](https://www.coindesk.com/tech/2021/10/01/compound-founder-says-80m-bug-presents-moral-dilemma-for-defi-users/), after initially intimating that people who don't give the tokens back could have their details passed to tax collection authorities. One interesting aspect of the story is that the problem was identified quite quickly, but because changing the contracts requires a governance process there was no way to deploy a quick fix and all of the vulnerable funds were drained.
 
-Coinbase users have been [exploited](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/), it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two-factor recovery process to bypass this safeguard and withdraw their victims' funds. In a notification [letter](https://oag.ca.gov/system/files/09-24-2021%20Customer%20Notification.pdf) to customers Coinbase said the flaw has been fixed and that all affected customers will be reimbursed. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer.
+Coinbase users have been [exploited](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/), it seems that around 6,000 users whose login details had been compromised elsewhere then suffered losses from their Coinbase accounts after the attackers exploited a flaw in Coinbase's SMS two-factor recovery process to bypass this safeguard and withdraw their victims' funds. In a notification [letter](https://oag.ca.gov/system/files/09-24-2021%20Customer%20Notification.pdf) to customers, Coinbase said the flaw has been fixed and that all affected customers will be reimbursed. This follows on from more general [discontent](https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/) with Coinbase customer service in the summer.
 
-The Digital Asset Market Structure and Investor Protection Act, which was [introduced](https://beyer.house.gov/news/documentsingle.aspx?DocumentID=5307) in July, continues to see [coverage](https://www.jdsupra.com/legalnews/new-us-digital-assets-bill-casts-wide-5957884/) and discussion, indicating that it will receive serious consideration from lawmakers. The proposed Act is one of the broadest pieces of legislation to address digital assets, and would clarify how different types of asset would fall under the purview of different enforcement agencies. The proposed definition of a security would focus on equity or voting rights in the issuing (corporate) entity, excluding voting on blockchain matters like block creation. There is also an aspect whereby selling tokens for an unfinished product whose production will be funded by the token sale (i.e. the ICO model) would be considered securities. Stablecoins could not be created or used without being approved by the Secretary of the Treasury, and the Federal Reserve would receive the authority to issue a US central bank digital currency.
+The Digital Asset Market Structure and Investor Protection Act, which was [introduced](https://beyer.house.gov/news/documentsingle.aspx?DocumentID=5307) in July, continues to see [coverage](https://www.jdsupra.com/legalnews/new-us-digital-assets-bill-casts-wide-5957884/) and discussion, indicating that it will receive serious consideration from lawmakers. The proposed Act is one of the broadest pieces of legislation to address digital assets and would clarify how different types of assets would fall under the purview of different enforcement agencies. The proposed definition of a security would focus on equity or voting rights in the issuing (corporate) entity, excluding voting on blockchain matters like block creation. There is also an aspect whereby selling tokens for an unfinished product whose production will be funded by the token sale (i.e. the ICO model) would be considered securities. Stablecoins could not be created or used without being approved by the Secretary of the Treasury, and the Federal Reserve would receive the authority to issue a US central bank digital currency.
 
 That's all for September. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
